# codeburn

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  sonar-project.properties  tsconfig.json  tsup.config.ts
.cursor/: mcp.json
.gemini/: settings.json.bak
.gemini/hooks/: crg-session-start.sh  crg-update.sh
.github/: dependabot.yml
.github/workflows/: block-claude-coauthor.yml  ci.yml  firstlook.yml  release-menubar.yml  release-npm.yml  release-tray.yml
.qoder/: settings.json  settings.json.bak
docs/: architecture.md
docs/providers/: README.md  crush.md  mux.md  vscode-cline-parser.md
gnome/: README.md  dataClient.js  extension.js  indicator.js  install.sh  metadata.json  prefs.js  stylesheet.css
gnome/schemas/: org.gnome.shell.extensions.codeburn.gschema.xml
mac/: CodeBurnMenubar.entitlements  README.md
mac/Scripts/: package-app.sh
mcp/: README.md  package.json  server.mjs
mcp-sonar/: README.md  package.json  server.mjs
scripts/: bundle-litellm.mjs  litellm-pin.json
src/: anomaly.ts  bash-utils.ts  classifier.ts  cli-date.ts  cli.ts  codex-cache.ts  compare-stats.ts  compare.tsx  config.ts  content-utils.ts  context-budget.ts  currency.ts  cursor-cache.ts  daily-cache.ts  dashboard.tsx  day-aggregator.ts  diagnose.ts  discovery-cache.ts  doctor.ts  export-html.ts  export.ts  fetch-utils.ts  format.ts  fs-utils.ts  git-safe.ts  import-data.ts  ink-win.ts  main.ts  menubar-installer.ts  menubar-json.ts  models.ts  optimize.ts  parse-progress.ts  parser.ts  plan-detect.ts  plans.ts  plugins.ts  redact.ts  schema.ts  source-cache.ts  (+4 more)
src/data/: litellm-snapshot.json
src/providers/: antigravity.ts  claude.ts  codebuff.ts  codex.ts  copilot.ts  crush.ts  cursor-agent.ts  cursor.ts  droid.ts  gemini.ts  goose.ts  index.ts  kimi.ts  kiro.ts  mistral-vibe.ts  openclaw.ts  opencode.ts  pi.ts  qwen.ts  types.ts  vscode-cline-parser.ts  warp.ts
tests/: anomaly.test.ts  cache-tier-pricing.test.ts  classifier.test.ts  cli-date.test.ts  cli-export-date-range.test.ts  cli-plan.test.ts  compare-stats.test.ts  content-utils.test.ts  currency-rounding.test.ts  daily-cache.test.ts  date-range-filter.test.ts  day-aggregator.test.ts  export.test.ts  fetch-utils.test.ts  format.test.ts  fs-utils.test.ts  git-safe.test.ts  menubar-json.test.ts  menubar-snapshot-contract.test.ts  models.test.ts  optimize-fs.test.ts  optimize.test.ts  parse-progress.test.ts  parser-cache.test.ts  parser-claude-cwd.test.ts  parser-compact-entry.test.ts  parser-subagent-collection.test.ts  plan-detect.test.ts  plans.test.ts  provider-registry.test.ts  schema.test.ts
tests/providers/: codebuff.test.ts  codex.test.ts  copilot.test.ts  crush.test.ts  cursor-agent.test.ts  cursor-bubble-dedup.test.ts  droid.test.ts  forge.test.ts  kilo-code.test.ts  kiro.test.ts  mistral-vibe.test.ts  omp.test.ts  openclaw.test.ts  opencode.test.ts  pi.test.ts  (+2 more)
windows/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: codeburn_cli.rs  ipc.rs  lib.rs  log_sanitizer.rs  main.rs
(+64 files in other folders)
