[package]
name = "codeburn-tray"
version = "0.1.0"
description = "CodeBurn Windows system-tray app — fork of getagentseal/codeburn (soumyadebroy3 fork)"
authors = ["Soumya"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "codeburn_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
regex = "1"
thiserror = "1"
open = "5"

[features]
# By default, Tauri runs in production mode. When `tauri dev` is run, it
# enables the `dev` feature.
custom-protocol = ["tauri/custom-protocol"]
