[package]
name = "codeburn-tray"
version = "0.1.0"
description = "CodeBurn Windows system-tray app — fork of getagentseal/codeburn (soumyadebroy3 fork)"
authors = ["soumyadebroy3"]
edition = "2021"
rust-version = "1.77"
license = "MIT"

[lib]
name = "codeburn_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2.3.3"
# tauri-plugin-updater removed for v1 — see comment in src/lib.rs.
tauri-plugin-single-instance = "2.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
once_cell = "1.21.4"
regex = "1.12.3"
thiserror = "2.0.18"
open = "5.3.4"
# tokio runtime for codeburn CLI spawn — std::process::Command::output()
# deadlocks on Windows .cmd shim invocation under no-console + piped stdio.
# tokio's process module drives stdout / stderr drains in parallel and
# supports kill_on_drop + tokio::time::timeout. Pattern adopted from
# upstream PR #101 cli.rs.
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
